# desktop-argo-tunnel

./: .gitignore  LICENSE  Makefile  README.md  RELEASE.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  postcss.config.mjs  tsr.config.json  vite.config.ts  vitest.config.ts
.github/workflows/: release.yml
.orchids/: orchids.json
docs/: ARCHITECTURE.md  README.md  USER_GUIDE.md
public/fonts/Work Sans/: COPYRIGHT.txt
scripts/: fix-all-ts-errors.sh  fix-typescript-errors.sh  start-dev.sh  test-tauri.sh
src/: main.tsx  store.test.ts  store.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/assets/: empty.kdbx
src-tauri/binaries/: download_cloudflared.sh
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  remote.rs  servers.rs  util.rs
src-tauri/src/activity/: commands.rs  event.rs  mod.rs  state.rs
src-tauri/src/cloudflared/: commands.rs  mod.rs
src-tauri/src/keepass/: commands.rs  kdbx.rs  mod.rs  models.rs  state.rs
src-tauri/src/remote/: cloudflared.rs  event.rs  handle.rs  state.rs
src-tauri/src/servers/: credentials.rs  event.rs  models.rs  state.rs
src-tauri/src/settings/: base_config.json  mod.rs
src/components/: CloudflaredCheckModal.tsx  CloudflaredUpdateModal.tsx  ConfirmationModal.tsx  FocusTrap.tsx  Logo.tsx  NotificationSystem.module.css  NotificationSystem.tsx  PasswordGenerator.tsx  Portal.tsx  RdpForm.tsx  ServerDetails.tsx  ServiceCard.tsx  Sidebar.module.css  Sidebar.tsx  SshForm.tsx  TabButton.tsx
src/components/Button/: Button.css  Button.tsx
src/components/Checkbox/: Checkbox.tsx
src/components/CommandPalette/: CommandPalette.tsx
src/components/Dashboard/: Dashboard.tsx  Skeleton.tsx  StatsCard.tsx
src/components/Details/: Details.css  Details.tsx
src/components/Favorites/: Favorites.tsx
src/components/Header/: Header.tsx
src/hooks/: useToast.ts
src/i18n/: index.ts
src/routes/: __root.css  __root.tsx  index.tsx
src/store/: index.ts  selectors.ts  serverSlice.ts  tunnelSlice.ts  uiSlice.ts
src/test/: setup.ts  utils.tsx
src/utils/: tauriUtils.ts
(+31 files in other folders)
