[package]
name = "desktop-argo-tunnel"
version = "0.3.8"
description = "Desktop argo tunnel"
authors = ["Maksim Lanies"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "desktop_argo_tunnel_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
dotenv-build = "0.1"

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
rand = "0.9.0"
tokio = { version = "1.43.0" }
anyhow = "1.0.96"
ts-rs = { version = "10.1", features = ["uuid-impl"] }
openidconnect = "4.0.0"
keyring = { version = "3.6.2", features = [
    "linux-native",
    "apple-native",
    "windows-native",
] }
tauri-plugin-log = { version = "2", git = "https://github.com/tauri-apps/plugins-workspace.git", branch = "v2" }
tauri-plugin-store = "2"
hyper = { version = "1.6.0", features = ["http1", "server"] }
hyper-util = { version = "0.1.10", features = ["tokio"] }
serde_qs = "0.13.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
config = { version = "0.15.8", default-features = false, features = [
    "json",
    "serde_json",
] }
json-patch = "4.0.0"
reqwest = { version = "0.12", features = ["json"] }
uuid = { version = "1.16.0", features = ["serde", "v4"] }
regex = "1.10.0"
chrono = { version = "0.4", features = ["serde"] }
tauri-plugin-shell = "2"
once_cell = "1.21.3"
tauri-plugin-clipboard-manager = "2"
cfg-if = "1.0.0"
# KeePass dependencies
keepass = "0.4"
aes = "0.8"
aes-gcm = "0.10"
argon2 = "0.5"
dirs = "5.0"
flate2 = "1.0"
md5 = "0.7"


[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"

[features]
mock = []
